14-linkerd/linkerd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: linkerd-dashboard
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
  namespace: linkerd
spec:
  tls:
    - hosts:
        - linkerd-dashboard.k8s-monitoring.plgrnd.be
  rules:
    - host: linkerd-dashboard.k8s-monitoring.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: linkerd-web
              servicePort: 8084
